# clocktower-img2json

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: database.py  main.py
frontend/: edit.html  index.html
src/clocktower_img2json/: __init__.py  api.py  cli.py  converter.py  data.py  database.py  ocv_processor.py  parser.py  startup.py
src/clocktower_img2json.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_script_crud.py  test_api_upload.py  test_converter.py  test_frontend_path_resolution.py  test_ocv_processor.py  test_parser.py  test_startup.py
