[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clocktower-img2json"
version = "0.1.0"
description = "Convert Blood on the Clocktower script images to valid script JSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn==0.32.1",
  "pillow==12.2.0",
  "pytesseract==0.3.13",
  "requests==2.32.3",
  "jsonschema==4.23.0",
  "python-multipart==0.0.27",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
]

[project.scripts]
clocktower-img2json = "clocktower_img2json.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
